crash on startup, blender 4.0, macos 12, Intel Iris Graphics 6100 #110335

Closed
opened 2023-07-21 08:47:36 +02:00 by Jakub Uhlik · 13 comments

System Information
Operating system: macOS-12.6.6-x86_64-i386-64bit 64 Bits
Graphics card: Intel(R) Iris(TM) Graphics 6100 Intel Inc. 4.1 INTEL-18.8.6

Blender Version
Broken: 4.0 from blender-4.0.0-alpha+main.3e88a2f44c41-darwin.x86_64-release.dmg
Worked: 4.0 from blender-4.0.0-alpha+main.8191b152ecf1-darwin.x86_64-release.dmg

Short description of error
crash on startup

Exact steps for others to reproduce the error
MacBookPro12,1 running macOS 12.6.6 (21G646) with Intel Iris Graphics 6100, gpu backend: OpenGL set a few weeks ago it still worked

Thread 0::  Dispatch queue: com.apple.main-thread
0   Blender                       	       0x10bb3fa0a GPU_context_create + 106
1   Blender                       	       0x10b8bba7a wm_window_ghostwindow_ensure(wmWindowManager*, wmWindow*, bool) + 570
2   Blender                       	       0x10b8bb82d wm_window_ghostwindows_ensure + 109
3   Blender                       	       0x10b884a33 WM_check + 179
4   Blender                       	       0x10b898310 wm_homefile_read_ex + 2288
5   Blender                       	       0x10b8a1137 WM_init + 327
6   Blender                       	       0x10af05d1f main + 751
7   dyld                          	       0x11ca6952e start + 462

Thread 1 Crashed:
0   libsystem_kernel.dylib        	    0x7ff80fe8d9a6 semaphore_wait_trap + 10
1   libdispatch.dylib             	    0x7ff80fd137ce _dispatch_sema4_wait + 16
2   libdispatch.dylib             	    0x7ff80fd13c9d _dispatch_semaphore_wait_slow + 98
3   libIlmThread.dylib            	       0x11b56ee0e IlmThread_3_1::(anonymous namespace)::DefaultThreadPoolProvider::threadLoop(std::__1::shared_ptr<IlmThread_3_1::(anonymous namespace)::DefaultThreadPoolData>) + 46
4   libIlmThread.dylib            	       0x11b56f1e1 void* std::__1::__thread_proxy<std::__1::tuple<std::__1::unique_ptr<std::__1::__thread_struct, std::__1::default_delete<std::__1::__thread_struct> >, void (IlmThread_3_1::(anonymous namespace)::DefaultThreadPoolProvider::*)(std::__1::shared_ptr<IlmThread_3_1::(anonymous namespace)::DefaultThreadPoolData>), IlmThread_3_1::(anonymous namespace)::DefaultThreadPoolProvider*, std::__1::shared_ptr<IlmThread_3_1::(anonymous namespace)::DefaultThreadPoolData> > >(void*) + 97
5   libsystem_pthread.dylib       	    0x7ff80feca4e1 _pthread_start + 125
6   libsystem_pthread.dylib       	    0x7ff80fec5f6b thread_start + 15

i can provide full report if needed

**System Information** Operating system: macOS-12.6.6-x86_64-i386-64bit 64 Bits Graphics card: Intel(R) Iris(TM) Graphics 6100 Intel Inc. 4.1 INTEL-18.8.6 **Blender Version** Broken: 4.0 from `blender-4.0.0-alpha+main.3e88a2f44c41-darwin.x86_64-release.dmg` Worked: 4.0 from `blender-4.0.0-alpha+main.8191b152ecf1-darwin.x86_64-release.dmg` **Short description of error** crash on startup **Exact steps for others to reproduce the error** MacBookPro12,1 running macOS 12.6.6 (21G646) with Intel Iris Graphics 6100, gpu backend: OpenGL set a few weeks ago it still worked ``` Thread 0:: Dispatch queue: com.apple.main-thread 0 Blender 0x10bb3fa0a GPU_context_create + 106 1 Blender 0x10b8bba7a wm_window_ghostwindow_ensure(wmWindowManager*, wmWindow*, bool) + 570 2 Blender 0x10b8bb82d wm_window_ghostwindows_ensure + 109 3 Blender 0x10b884a33 WM_check + 179 4 Blender 0x10b898310 wm_homefile_read_ex + 2288 5 Blender 0x10b8a1137 WM_init + 327 6 Blender 0x10af05d1f main + 751 7 dyld 0x11ca6952e start + 462 Thread 1 Crashed: 0 libsystem_kernel.dylib 0x7ff80fe8d9a6 semaphore_wait_trap + 10 1 libdispatch.dylib 0x7ff80fd137ce _dispatch_sema4_wait + 16 2 libdispatch.dylib 0x7ff80fd13c9d _dispatch_semaphore_wait_slow + 98 3 libIlmThread.dylib 0x11b56ee0e IlmThread_3_1::(anonymous namespace)::DefaultThreadPoolProvider::threadLoop(std::__1::shared_ptr<IlmThread_3_1::(anonymous namespace)::DefaultThreadPoolData>) + 46 4 libIlmThread.dylib 0x11b56f1e1 void* std::__1::__thread_proxy<std::__1::tuple<std::__1::unique_ptr<std::__1::__thread_struct, std::__1::default_delete<std::__1::__thread_struct> >, void (IlmThread_3_1::(anonymous namespace)::DefaultThreadPoolProvider::*)(std::__1::shared_ptr<IlmThread_3_1::(anonymous namespace)::DefaultThreadPoolData>), IlmThread_3_1::(anonymous namespace)::DefaultThreadPoolProvider*, std::__1::shared_ptr<IlmThread_3_1::(anonymous namespace)::DefaultThreadPoolData> > >(void*) + 97 5 libsystem_pthread.dylib 0x7ff80feca4e1 _pthread_start + 125 6 libsystem_pthread.dylib 0x7ff80fec5f6b thread_start + 15 ``` i can provide full report if needed
Jakub Uhlik added the
Type
Report
Status
Needs Triage
Priority
Normal
labels 2023-07-21 08:47:36 +02:00

The required minimum is now OpenGL version 4.3. This GPU only seems to support up to 4.1 on mac[1]. The only recourse will be to stick with Blender 3.6 LTS which will be supported until June 2025.

@fclem Can the 4.0 release notes be updated and can this be handled in a more graceful way besides a crash perhaps?

[1] https://en.wikipedia.org/wiki/List_of_Intel_graphics_processing_units#Gen8 (search for "Iris Graphics 6100" and look across to the OpenGL support column)

The required minimum is now OpenGL version 4.3. This GPU only seems to support up to 4.1 on mac[1]. The only recourse will be to stick with Blender 3.6 LTS which will be supported until June 2025. @fclem Can the 4.0 release notes be updated and can this be handled in a more graceful way besides a crash perhaps? [1] https://en.wikipedia.org/wiki/List_of_Intel_graphics_processing_units#Gen8 (search for "Iris Graphics 6100" and look across to the OpenGL support column)

Marking as high as there's been a few other bugs that are coming in due to crashes and no clear error message (like 110843 where tensions are running high).

This bug should track both updating the Release Notes and failing more gracefully with a clear error to the user.

Marking as high as there's been a few other bugs that are coming in due to crashes and no clear error message (like `110843` where tensions are running high). This bug should track both updating the Release Notes and failing more gracefully with a clear error to the user.
Pratik Borhade added the
Platform
macOS
label 2023-08-07 04:52:31 +02:00
Jeroen Bakker self-assigned this 2023-08-07 15:40:43 +02:00
Jeroen Bakker added this to the EEVEE & Viewport project 2023-08-07 15:40:47 +02:00
Jeroen Bakker added this to the 4.0 milestone 2023-08-07 15:40:51 +02:00
Member

I will check why the popup doesn't appear in this case and would update the release notes to mentioned the precise minimum requirements for MacOS.

  • Reason the popup doesn't appear is that the active GPU backend is set to GPU_BACKEND_NONE that will assert and create incorrect data. We should introduce a dummy backend to match the current backend detection.
I will check why the popup doesn't appear in this case and would update the release notes to mentioned the precise minimum requirements for MacOS. * Reason the popup doesn't appear is that the active GPU backend is set to GPU_BACKEND_NONE that will assert and create incorrect data. We should introduce a dummy backend to match the current backend detection.
Member

@deadpin just for your information. MacOS only supports OpenGL upto 3.3 even if the hardware can run a higher version of OpenGL.

@deadpin just for your information. MacOS only supports OpenGL upto 3.3 even if the hardware can run a higher version of OpenGL.

I'm just poking around while looking for any info relating to compiling from source with the patch from Apple reported to correct this, and wanted to note the problem apparently insn't the removal of OpenGL support but a skip ahead on MacOS versions. I'm going to try adding this patch ac708cb33a to the source I'm currently downloading... wish me luck!

I'm just poking around while looking for any info relating to compiling from source with the patch from Apple reported to correct this, and wanted to note the problem apparently insn't the removal of OpenGL support but a skip ahead on MacOS versions. I'm going to try adding this patch https://projects.blender.org/blender/blender/commit/ac708cb33ae998dd75b49ecf92b90c3d61d4c6d4 to the source I'm currently downloading... wish me luck!
Member

@robert-hall hi, I started a build that you can download it will be ready in 30 minutes at https://builder.blender.org/download/patch/ in half an hour.

Ps I am not from Apple :-)

@robert-hall hi, I started a build that you can download it will be ready in 30 minutes at https://builder.blender.org/download/patch/ in half an hour. Ps I am not from Apple :-)

@robert-hall hi, I started a build that you can download it will be ready in 30 minutes at https://builder.blender.org/download/patch/ in half an hour.

Ps I am not from Apple :-)

@Jeroen-Bakker thanks, I did manage to compile my very first Blender build, however it crashed on startup, still I'm a bit excited at the prospect and happy I have cmake and subversion working properly to facilitate this... and I downloaded #111099 patch build and that crashed too so now I am very weary and must be off to work as a zombie this day ahead of me, I should have quit earlier and picked up again another time... anyway I guess I'll try again probably not tonight (I'll definitely be sleeping) but soon. I left the details, crash logs and what on the thread I started at #111083 (comment)

> @robert-hall hi, I started a build that you can download it will be ready in 30 minutes at https://builder.blender.org/download/patch/ in half an hour. > > Ps I am not from Apple :-) @Jeroen-Bakker thanks, I did manage to compile my very first Blender build, however it crashed on startup, still I'm a bit excited at the prospect and happy I have cmake and subversion working properly to facilitate this... and I downloaded #111099 patch build and that crashed too so now I am very weary and must be off to work as a zombie this day ahead of me, I should have quit earlier and picked up again another time... anyway I guess I'll try again probably not tonight (I'll definitely be sleeping) but soon. I left the details, crash logs and what on the thread I started at https://projects.blender.org/blender/blender/issues/111083#issuecomment-999189

@Jeroen-Bakker Thank you I'm just off from work and looking at this...

during the day I was able to clone the Blender repo on my iPhone using Working Copy Git-Client (average speed maybe 600 kb per sec), airdropped to my Mac downloads and moved to blender-git, so 100% sure that's all there,

but the lib folder is still only partial and filling in very slow (or maybe stuck checking assets and I have to keep trying again) using terminal command:

cd blender
make update

I guess I got lucky last eve when from about 30% to 70% the download speed on my Mac ramped up to maybe 400 Kb average, but then it dropped back down again so "make update" was getting stuck or quitting... with Working Copy at least I have the initial download solved anyway, this would go very smoothly from the beginning of the month to maybe the 6th or 7th day then I'm throttled again by my (unquestionably evil) broadband service provider (beginning with the letter "T").

Just catching my breath now after a long day, and although I was able to build blender (with errors due to not completing svm check), I'm still new to compiling from source, and more specifically how to include patches in a new build, maybe some suggestions how to proceed?

@Jeroen-Bakker Thank you I'm just off from work and looking at this... during the day I was able to clone the Blender repo on my iPhone using Working Copy Git-Client (average speed maybe 600 kb per sec), airdropped to my Mac downloads and moved to blender-git, so 100% sure that's all there, but the lib folder is still only partial and filling in very slow (or maybe stuck checking assets and I have to keep trying again) using terminal command: cd blender make update I guess I got lucky last eve when from about 30% to 70% the download speed on my Mac ramped up to maybe 400 Kb average, but then it dropped back down again so "make update" was getting stuck or quitting... with Working Copy at least I have the initial download solved anyway, this would go very smoothly from the beginning of the month to maybe the 6th or 7th day then I'm throttled again by my (unquestionably evil) broadband service provider (beginning with the letter "T"). Just catching my breath now after a long day, and although I was able to build blender (with errors due to not completing svm check), I'm still new to compiling from source, and more specifically how to include patches in a new build, maybe some suggestions how to proceed?

oh ok I see it, dummy backend is included in the repo I got with my iPhone, now to somehow get the rest at 70 kb per sec without timing out and we should be good. deleted the lib folder so everything will be fresh today anyway...

oh ok I see it, dummy backend is included in the repo I got with my iPhone, now to somehow get the rest at 70 kb per sec without timing out and we should be good. deleted the lib folder so everything will be fresh today anyway...

After much testing time and time again I have to report that I am unable to complete svn check with make update, this is due to the poor connectivity allowed to me by t-mobile outside of a 3-6 day window beginning at the 1st or 2nd of every month. I was able to work around the throttled hotspot data at least partially using Working Copy Git-Client on my iPhone, which brings the full ~/blender-git/blender folder to my phone which I can then airdrop to my desktop, but unfortunately I know of no other means of also bringing the ~/blender-git/lib folder to my phone. svn times out before it can complete, and typing make update again skips past the incomplete ~/blender-git/lib/darwin folder to ~/blender-git/lib/assets which also gets stuck and hangs until eventually timing out with an error.

I have every confidence I will absolutely be able to breeze right through this beginning around 9/1 to 9/2 but until then I'm simply at a loss regarding building from source. I feel often as if living in some 3rd world over the years, the flow of data passing me by, and the commerce that is integral within it, I've missed deadlines for art challenges, had so many issues with throttling of data it has cost me more than I can ever say. I will of course eagerly participate in testing as soon as I am able, the beginning of the month for a short time, how many days I can never tell, as even if a download fails it is counted or measured before it completes and counted against me, though for severe weather like hurricanes or for any other outage I am never compensated or even prorated for extended durations of service regarding broadband data. My sincere apologies I'm afraid it is what it is. I'll look for other iPhone apps that perhaps might somehow include cmake and subversion in order to allow the svn check on iOS, but as of now I don't know of any.

After much testing time and time again I have to report that I am unable to complete svn check with make update, this is due to the poor connectivity allowed to me by t-mobile outside of a 3-6 day window beginning at the 1st or 2nd of every month. I was able to work around the throttled hotspot data at least partially using Working Copy Git-Client on my iPhone, which brings the full ~/blender-git/blender folder to my phone which I can then airdrop to my desktop, but unfortunately I know of no other means of also bringing the ~/blender-git/lib folder to my phone. svn times out before it can complete, and typing make update again skips past the incomplete ~/blender-git/lib/darwin folder to ~/blender-git/lib/assets which also gets stuck and hangs until eventually timing out with an error. I have every confidence I will absolutely be able to breeze right through this beginning around 9/1 to 9/2 but until then I'm simply at a loss regarding building from source. I feel often as if living in some 3rd world over the years, the flow of data passing me by, and the commerce that is integral within it, I've missed deadlines for art challenges, had so many issues with throttling of data it has cost me more than I can ever say. I will of course eagerly participate in testing as soon as I am able, the beginning of the month for a short time, how many days I can never tell, as even if a download fails it is counted or measured before it completes and counted against me, though for severe weather like hurricanes or for any other outage I am never compensated or even prorated for extended durations of service regarding broadband data. My sincere apologies I'm afraid it is what it is. I'll look for other iPhone apps that perhaps might somehow include cmake and subversion in order to allow the svn check on iOS, but as of now I don't know of any.
Member

Hi @robert-hall if you have issues compiling Blender it is best to use the appropriate channel (https://wiki.blender.org/wiki/Communication/Contact/Chat) for that on blender-chat, keeping the issue tracker close to what it should do. Keep track of issues and fixes.

Hi @robert-hall if you have issues compiling Blender it is best to use the appropriate channel (https://wiki.blender.org/wiki/Communication/Contact/Chat) for that on blender-chat, keeping the issue tracker close to what it should do. Keep track of issues and fixes.

Hi @robert-hall if you have issues compiling Blender it is best to use the appropriate channel (https://wiki.blender.org/wiki/Communication/Contact/Chat) for that on blender-chat, keeping the issue tracker close to what it should do. Keep track of issues and fixes.

Ok, thanks, and I did finally compile successfully and without error thank you, I had hoped it would run but all I got was that pop-up

> Hi @robert-hall if you have issues compiling Blender it is best to use the appropriate channel (https://wiki.blender.org/wiki/Communication/Contact/Chat) for that on blender-chat, keeping the issue tracker close to what it should do. Keep track of issues and fixes. Ok, thanks, and I did finally compile successfully and without error thank you, I had hoped it would run but all I got was that pop-up
Member
Updated the release notes at https://wiki.blender.org/wiki/Reference/Release_Notes/4.0/Core
Blender Bot added
Status
Archived
and removed
Status
Confirmed
labels 2023-08-22 07:51:42 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#110335
No description provided.