intern/ghost/intern/GHOST_SystemCocoa.hh
@@ -267,6 +267,22 @@ class GHOST_SystemCocoa : public GHOST_System {
    */
   GHOST_TSuccess handleKeyEvent(void *eventPtr);
 
+  /**
+   * Show a system message box
+   * \param title: The title of the message box.
+   * \param message: The message to display.
+   * \param help_label: Help button label.
+   * \param continue_label: Continue button label.
+   * \param link: An optional hyperlink.
+   * \param dialog_options: Options  how to display the message.
+   */
+  virtual GHOST_TSuccess showMessageBox(const char *title,
+                                        const char *message,
+                                        const char *help_label,
+                                        const char *continue_label,
+                                        const char *link,
+                                        GHOST_DialogOptions dialog_options) const;
+
  protected:
   /**
    * Initializes the system.
